[tool.poetry]
name = "garment-shop"
version = "0.1.0"
description = "Simple garment shop management with payments"
authors = ["Cursor User <user@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
sqlmodel = "^0.0.22"
jinja2 = "^3.1.0"
python-multipart = "^0.0.9"
pydantic = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"